--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tests:watch": "jest --watch",
     "tests:coverage": "jest && codecov",
     "start": "npx webpack-dev-server --open",
+    "dev": "concurrently \"nodemon server.js\" \"webpack -w\"",
     "build": "webpack"
   },
   "keywords": [],
@@ -36,14 +37,17 @@
     "@testing-library/react": "^10.0.2",
     "babel-jest": "^25.2.4",
     "babel-loader": "^8.1.0",
+    "concurrently": "^5.1.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^4.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.2.4",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
+    "nodemon": "^2.0.3",
     "path": "^0.12.7",
     "sass-loader": "^8.0.2",
     "webpack": "^4.42.1",
